# sphinx-book-theme

./: .boussole.json  .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  noxfile.py  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini  web-compile-config.yml  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: lighthouserc.json  links.yml  publish.yml  tests.yml
docs/: conf.py  config-header.yml  configure.md  content-blocks.md  contributing.md  index.md  launch.md  layout.ipynb  layout.md  limits.ipynb  limits.md  margin.md  notebooks.ipynb  notebooks.md  reference.md  requirements.txt  thebe.md
docs/_data/: config-header.yml
docs/_static/: codemirror.css  custom.css
docs/_templates/: header-test.html  test.html
docs/api/: index.rst
docs/components/: custom-css.md  download.md  icon-links.md  index.md  logo.md  source-files.md
docs/content/: content-blocks.md  index.md  launch.md  notebooks.md
docs/contributing/: architecture.md  index.md  setup.md  style.md  subthemes.md  tests.md  translate.md  versions.md
docs/customize/: custom-css.md  footer-content.md  header.md  index.md  sidebar-primary.md  sidebar-secondary.md  single-page.md  source-files.md
docs/demochapter1/: index.md
docs/demochapter2/: chapterpage1.md  index.md
docs/features/: index.md  layout.ipynb  layout.md  layout_elements.ipynb  limits.ipynb  limits.md  myst.md  notebooks.ipynb
docs/howto/: download.md  left-sidebar.md  right-sidebar.md  source-files.md
docs/reference/: admonitions.md  api-numpy.md  blog.md  chapterpage1.md  chapterpage2.md  chapterpage3.md  comments.md  demo.rst  extensions.md  index.md  limits.md  markdown_limits.md  notebookpage1.ipynb  notebooks.md  special-theme-elements.md  thebe.md
docs/scripts/: update_kitchen_sink.py
docs/sections/: announcements.md  footer-content.md  footer.md  header.md  index.md  sidebar-primary.md  sidebar-secondary.md
docs/test_pages/: index.md  limits.md
docs/tutorials/: get-started.md
sphinx_book_theme/: __init__.py  footer.html  launch.py  layout.html  sidebar.html  theme.conf  topbar.html
sphinx_book_theme/_templates/: prev-next.html  sbt-sidebar-nav.html  sidebar-logo.html
sphinx_book_theme/layout/: footer.html.j2  topbar.html.j2
sphinx_book_theme/scss/: sphinx-book-theme.scss
sphinx_book_theme/sections/: article.html  header.html  sidebar-primary.html
sphinx_book_theme/static/: jupyterbook.css  jupyterbook.scss  print.js_t  sphinx-book-theme.009e4be57deb017e63856b6e7a13805b.js  sphinx-book-theme.01f49d9d8f4f02518b50b83e3c92fd04.css  sphinx-book-theme.08156bb46902734270a4dfbb8278e507.js  sphinx-book-theme.10721163294fe2f8a327660fd743e528.css  sphinx-book-theme.115a9f099644cb6aa351b79274f33ad7.css  sphinx-book-theme.12cf6c1a310a50d0ace827fa3b79345f.css  sphinx-book-theme.17e99cb0ad62fb3181c7ff3fb104e51b.js  sphinx-book-theme.18c18b6b7b48db3b1ec4badd9ba0334f.css  sphinx-book-theme.1cc76b1a9500a160d02936bf98768d44.css  sphinx-book-theme.1d791a90c236148a603897e981fc5f14.css  sphinx-book-theme.1f9b0abcd70313fa468c66f83e38d3a1.css  sphinx-book-theme.22e0f887bcfa638c192032da19ca5c8e.css  sphinx-book-theme.27151f2de8a6da6e72b57ec231ceb131.css  sphinx-book-theme.2b987205ae9623f1e8a6c50893438118.css  sphinx-book-theme.2bae7e961469472ff19982589476d7d1.css  sphinx-book-theme.30103ff4bb455cea15229add4c0a4304.css  sphinx-book-theme.303fd6d20eb1fde33594ecf0db000c74.css  sphinx-book-theme.35dccf4b80a3c7068d685dd641fed318.css  sphinx-book-theme.36e22ce31c48aab0908abe55a67720a7.css  sphinx-book-theme.379551dfb7ef9943dbb300da9fad4069.css  sphinx-book-theme.3b24e2d940fc6b5a0ff0663ffd603a93.css  sphinx-book-theme.4725d39478f0b1676dc24f7b1bbee0ae.js  sphinx-book-theme.4a624ebdb1caec97933e1229c6fef881.css  sphinx-book-theme.4bef0d2c6682b01f10854848d3928c24.css  sphinx-book-theme.4d1d9765327b13f7868e2af5f121737a.js  sphinx-book-theme.4df12a206c72a219d3ba40de5b28876a.js  sphinx-book-theme.4ff1fef338556deea8228fdbb4ce9b58.css  sphinx-book-theme.53dedf2195201536cb67efd6824d55fc.css  sphinx-book-theme.549866adb2d257bf87dce71e0e163e6c.js  sphinx-book-theme.59e7d1499aa759519747cb2a1a335dc4.css  sphinx-book-theme.5e646827be6622f015344ff32b733074.js  sphinx-book-theme.600bdafd8c2378656ba953e0f264415a.css  sphinx-book-theme.60ee9a98ef899ede750388e4f0bbf03b.css  sphinx-book-theme.63c1bb27cdeb33c8dc47305fbcf4d6aa.css  sphinx-book-theme.6886774a12a69dc12929882803e871e1.js  sphinx-book-theme.6b6b5e6c617099a1998a7e781f90e737.js  sphinx-book-theme.6d63ca35aa3bd31f582e625a249d926a.js  (+49 more)
sphinx_book_theme/topbar/: closesidebarbutton.html  download.html  launchbuttons.html  logo.html  repobuttons.html  tableofcontents.html  toc.html  toggle-sidebar.html
sphinx_book_theme/translations/: README.md  _convert.py
src/jinja/: theme.conf  theme.conf.j2
src/js/: sphinx-book-theme.js
src/scss/: _ablog.scss  _footer.scss  _leftbar.scss  _main.scss  _margin.scss  _page.scss  _print.scss  _righttoc.scss  _tableofcontents.scss  _toc.scss  _topbar.scss  _utilities.scss  _variables.scss  sphinx-book-theme.scss
src/sphinx_book_theme/: __init__.py  _compat.py  _compile_translations.py  _components.py  _convert.py  _directives.py  _transforms.py  nodes.py
tests/: test_build.py  test_locale_convert.py
tests/test_build/: article__margin--marginnote.html  article__margin--sidenote.html  build__header-article.html  build__pagetoc--page-multipletitles.html  build__pagetoc--page-onetitle.html  build__pagetoc--page-onetitlenoheadings.html  build__side-nav.html  build__sidebar-primary__nav.html  escaped_description.html  header-article.html  header-article__launch-buttons.html  header-article__repo-buttons--all-off.html  header-article__repo-buttons--all-on.html  header-article__repo-buttons--custom-branch.html  header-article__repo-buttons--one-on.html  header__launch-buttons--bitbucket.html  header__launch-buttons--github.html  header__launch-buttons--gitlab.html  header__repo-buttons--all-on.html  (+29 more)
(+429 files in other folders)
